# OTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  dependencies.cmake
OTemplate/: CMakeLists.txt
OTemplate/include/: ScopedPtr.h
include/: ScopedPtr.h
src/: CMakeLists.txt
test/: CMakeLists.txt  Test.cpp
